Fixed text alignment

--- a/src/components/Planner/Planner.scss
+++ b/src/components/Planner/Planner.scss
@@ -34,6 +34,7 @@
 }
 
 .planner__list {
+  text-align: left;
   list-style-type: none;
   margin: 0;
   padding: 0;
